--- a/manuscript/tech_appendix/tech_appendix.tex
+++ b/manuscript/tech_appendix/tech_appendix.tex
@@ -1395,7 +1395,7 @@ We can assign at the district, school, or individual level depending on the desi
 \begin{itemize}
 \item Blocked individual randomization: simple random sampling occurs within each school, with $\bar{n}\bar{T}$ units assigned to treatment in each school.
 \item Cluster 2-level randomization: simple random sampling occurs across schools, with $J \bar{T}$ schools assigned to treatment.
-\item Blocked cluster 2-level randomization: school level occurs within each district, with $J\bar{T}$ schools assigned to treatment in each district.
+\item Blocked cluster 2-level randomization: school level assignment occurs within each district, with $J\bar{T}$ schools assigned to treatment in each district.
 \item Cluster 3-level randomization: simple random sampling occurs across districts, with $K \bar{T}$ districts assigned to treatment.
 \end{itemize}
 
